unpackaged/main/default/objects/Booth_Staging__c/Booth_Staging__c.object-meta.xml
<CustomObject>
    <description>A place where test Booths and Booth Contacts live until approved</description>
    <label>Booth Staging</label>
    <nameField>
        <displayFormat>BStage-{0000}</displayFormat>
        <label>Booth Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booth Staging</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>