unpackaged/main/default/objects/Booth_Staging__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Account that was created or found as a match</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booth Staging</relationshipLabel>
    <relationshipName>Booth_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>