unpackaged/main/default/objects/Booth_Staging__c/fields/Agency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contact__c</fullName>
    <label>Agency Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>