unpackaged/main/default/objects/Booth_Staging__c/fields/Available_For_Expresso_Manual__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Expresso_Manual__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Online Exhibitor Manual in Expresso?</label>
    <type>Checkbox</type>
</CustomField>