unpackaged/main/default/objects/Booth_Staging__c/fields/Booth_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Booth_Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Booth Contact that was created or found as a match</inlineHelpText>
    <label>Booth Contact</label>
    <referenceTo>Oracle_Show_Booth_Contact__c</referenceTo>
    <relationshipLabel>Booth Staging</relationshipLabel>
    <relationshipName>Booth_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>