unpackaged/main/default/objects/Booth_Staging__c/fields/Booth_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Booth_ID_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Booth that was created or found as a match</inlineHelpText>
    <label>Booth</label>
    <referenceTo>Oracle_Show_Booth__c</referenceTo>
    <relationshipLabel>Booth Staging</relationshipLabel>
    <relationshipName>Booth_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>