unpackaged/main/default/objects/Booth_Staging__c/fields/Booth_ID__c.field-meta.xml
<CustomField>
    <fullName>Booth_ID__c</fullName>
    <label>Booth ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>