unpackaged/main/default/objects/Booth_Staging__c/fields/Booth_Size__c.field-meta.xml
<CustomField>
    <fullName>Booth_Size__c</fullName>
    <label>Booth Size</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>