unpackaged/main/default/objects/Booth_Staging__c/fields/Booth_Upload__c.field-meta.xml
<CustomField>
    <fullName>Booth_Upload__c</fullName>
    <label>Booth Upload</label>
    <referenceTo>Booth_Upload__c</referenceTo>
    <relationshipLabel>Booth Staging</relationshipLabel>
    <relationshipName>Booth_Staging</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>