unpackaged/main/default/objects/Booth_Staging__c/fields/Confirmation_Error__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Error__c</fullName>
    <label>Confirmation Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>