unpackaged/main/default/objects/Booth_Staging__c/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the Contact that was created or found as a match</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Booth Staging</relationshipLabel>
    <relationshipName>Booth_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>