unpackaged/main/default/objects/Booth_Staging__c/fields/Cust_Type__c.field-meta.xml
<CustomField>
    <fullName>Cust_Type__c</fullName>
    <label>Cust Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>01 Organiser</fullName>
            </value>
            <value>
                <fullName>11 Contractor</fullName>
            </value>
            <value>
                <fullName>12 Contractor</fullName>
            </value>
            <value>
                <fullName>13 Inter Company - Non Mes</fullName>
            </value>
            <value>
                <fullName>14 Melville Beck (Furniture)</fullName>
            </value>
            <value>
                <fullName>15 Gold Contractor</fullName>
            </value>
            <value>
                <fullName>17 Melville Events</fullName>
            </value>
            <value>
                <fullName>20 Silver Contractor</fullName>
            </value>
            <value>
                <fullName>24 Graphics</fullName>
            </value>
            <value>
                <fullName>25 Elite</fullName>
            </value>
            <value>
                <fullName>99 Exibitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>