unpackaged/main/default/objects/Booth_Staging__c/fields/Design_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Design_Configuration__c</fullName>
    <label>Design Configuration</label>
    <length>200</length>
    <type>Text</type>
</CustomField>