unpackaged/main/default/objects/Booth_Staging__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>