unpackaged/main/default/objects/Booth_Staging__c/fields/Exhibitor_Body__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Body__c</fullName>
    <label>Exhibitor Body</label>
    <length>200</length>
    <type>Text</type>
</CustomField>