unpackaged/main/default/objects/Booth_Staging__c/fields/Exhibitor_GUID__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_GUID__c</fullName>
    <label>Exhibitor GUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>