unpackaged/main/default/objects/Booth_Staging__c/fields/Exhibitor_Password__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Password__c</fullName>
    <label>Exhibitor Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>