unpackaged/main/default/objects/Booth_Staging__c/fields/Exhibitor_Status__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Status__c</fullName>
    <label>Exhibitor Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>