unpackaged/main/default/objects/Booth_Staging__c/fields/Exhibitor_Username__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Username__c</fullName>
    <label>Exhibitor Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>