unpackaged/main/default/objects/Booth_Staging__c/fields/Nameboard_Name__c.field-meta.xml
<CustomField>
    <fullName>Nameboard_Name__c</fullName>
    <label>Nameboard Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>