unpackaged/main/default/objects/Booth_Staging__c/fields/New_Exhibitor__c.field-meta.xml
<CustomField>
    <fullName>New_Exhibitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Exhibitor</label>
    <type>Checkbox</type>
</CustomField>