unpackaged/main/default/objects/Booth_Staging__c/fields/Open_Sides__c.field-meta.xml
<CustomField>
    <fullName>Open_Sides__c</fullName>
    <label>Open Sides</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>