unpackaged/main/default/objects/Booth_Staging__c/fields/Operations_Zone__c.field-meta.xml
<CustomField>
    <fullName>Operations_Zone__c</fullName>
    <label>Operations Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>