unpackaged/main/default/objects/Booth_Staging__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Staging_Booths</relationshipName>
    <type>Lookup</type>
</CustomField>