unpackaged/main/default/objects/Booth_Staging__c/fields/Organiser_Exhibitor_Id__c.field-meta.xml
<CustomField>
    <fullName>Organiser_Exhibitor_Id__c</fullName>
    <label>Organiser_Exhibitor_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>