unpackaged/main/default/objects/Booth_Staging__c/fields/Organiser_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Organiser_Order_Id__c</fullName>
    <label>Organiser_Order_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>