unpackaged/main/default/objects/Booth_Staging__c/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <label>Package Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>