unpackaged/main/default/objects/Booth_Staging__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>