unpackaged/main/default/objects/Booth_Staging__c/fields/Pillar_Column_Size_c__c.field-meta.xml
<CustomField>
    <fullName>Pillar_Column_Size_c__c</fullName>
    <label>Pillar / Column Size</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>