unpackaged/main/default/objects/Booth_Staging__c/fields/Post_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Zip_Code__c</fullName>
    <label>Post/Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>