unpackaged/main/default/objects/Booth_Staging__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <length>5</length>
    <type>Text</type>
</CustomField>