unpackaged/main/default/objects/Booth_Staging__c/fields/Service_Zone__c.field-meta.xml
<CustomField>
    <fullName>Service_Zone__c</fullName>
    <label>Service Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>