unpackaged/main/default/objects/Booth_Staging__c/fields/State_County__c.field-meta.xml
<CustomField>
    <fullName>State_County__c</fullName>
    <label>State/County</label>
    <length>120</length>
    <type>Text</type>
</CustomField>